--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kendall Swanson</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
-<body>
-    <header>
-        <h1>Kendall Swanson</h1>
-        <nav>
-            <ul>
-                <li><a href="#AboutMe">About Me</a></li>
-                <li><a href="#Portfolio">Portfolio</a></li>
-                <li><a href="#ContactMe">Contact Me</a></li>
-            </ul>
-        </nav>
+<body >
 
-    </header>
-    
-    <main>
+        <header>
+            <nav>
+                <a href="#Home" class="navleft">Home</a>
+                <div class="navright">
+                    <a href="#AboutMe" >About Me</a>
+                    <a href="#Portfolio">Portfolio</a>
+                    <a href="#ContactMe">Contact Me</a>
+                </div>
+            </nav>
+        </header>
+        
+        <section class="hero-image" >
+            <div class="hero-text">
+                <img src="assets/images/placeholder4.jpeg" alt=""/>
+                <h2>Kendall Swanson</h2>
+                <h4>Full-Stack Web Developer</h4> 
+            </div>
+        </section>
 
-    </main>
-
+        <section class="aboutme">
+            <h2 >About Me</h2>
+            <div class="divider"></div>
+        </section>
     <footer>
 
     </footer>
