--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kendall Swanson</title>
-    <!-- <link rel="stylesheet" href="assets/css/reset.css" /> -->
+    <link rel="stylesheet" href="assets/css/reset.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
 
@@ -32,7 +32,13 @@
 
         <section class="aboutme">
             <h2>About Me</h2>
-            <div class="divider"></div>
+            <div class="divider">
+                <p>
+                    Attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant 
+                    at Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.
+                </p>
+            </div>
+
         </section>
     <footer>
 
