added Portfolio and dividers, added in first project

--- a/index.html
+++ b/index.html
@@ -31,14 +31,27 @@
         </section>
 
         <section class="aboutme">
-            <h2>About Me</h2>
+            <h2 id="AboutMe">About Me</h2>
             <div class="divider">
                 <p>
                     Attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant 
                     at Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.
                 </p>
             </div>
-
+        </section>
+        <section class="portfolio">
+            <div class = "space">
+                <div class="divider-left"></div>
+                <h2 id="Portfolio">Portfolio</h2>
+                <div class="divider-right"></div>
+            </div>
+ 
+            <div class="projects">
+                <a><img src="assets/images/project 1.jpeg"/></a>
+                <a><img/></a>
+                <a><img/></a>
+                <a><img/></a>
+            </div>
         </section>
     <footer>
 
