added images in for projects

--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
             </div>
  
             <div class="projects">
-                <a><img src="assets/images/project 1.jpeg"/></a>
-                <a><img/></a>
-                <a><img/></a>
-                <a><img/></a>
+                <a><img id="project1" src="assets/images/project 1.jpeg"/></a>
+                <a><img id="project2"src="assets/images/project2.jpeg" /></a>
+                <a><img id="project3"src="assets/images/project3.jpeg" /></a>
+                <a><img id="project4" src="assets/images/project4.jpeg"/></a>
             </div>
         </section>
     <footer>
