--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
             </div>
  
             <div class="projects">
+                <div>
+                    <img id="project1" src="assets/images/project 1.jpeg"/>
+                    <div class="overlay">
+                        <a  href ="assets/images/project 1.jpeg"
+                </div>
                 <a><img id="project1" src="assets/images/project 1.jpeg"/></a>
                 <a><img id="project2"src="assets/images/project2.jpeg" /></a>
                 <a><img id="project3"src="assets/images/project3.jpeg" /></a>
