added in draft of the background

--- a/index.html
+++ b/index.html
@@ -5,61 +5,36 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kendall Swanson</title>
-    <link rel="stylesheet" href="assets/css/reset.css" />
-    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/jass.css"></link>
+    <link rel="stylesheet" href="./assets/css/style.css"></link>
 </head>
+<body>
+    <header>
+        <nav>
+            Navigation Bar
+        </nav>
+    </header>    
 
-<body >
+    <main> 
+        <!-- IMAGE WITH HERO ICON ON IT -->
+        <div class="hero-container">
+            <p>Hero-Container</p>
+        </div>
 
-        <header>
-            <nav>
-                <a href="#Home" class="navleft">Home</a>
-                <div class="navright">
-                    <a href="#AboutMe" >About Me</a>
-                    <a href="#Portfolio">Portfolio</a>
-                    <a href="#ContactMe">Contact Me</a>
-                </div>
-            </nav>
-        </header>
-        
-        <section class="hero-image" >
-            <div class="hero-text">
-                <img src="assets/images/placeholder4.jpeg" alt=""/>
-                <h2>Kendall Swanson</h2>
-                <h4>Full-Stack Web Developer</h4> 
-            </div>
-        </section>
+        <!-- ABOUT ME-->
+        <div class="about-container">
+            About
+        </div>
 
-        <section class="aboutme">
-            <h2 id="AboutMe">About Me</h2>
-            <div class="divider">
-                <p>
-                    Attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant 
-                    at Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.
-                </p>
-            </div>
-        </section>
-        <section class="portfolio">
-            <div class = "space">
-                <div class="divider-left"></div>
-                <h2 id="Portfolio">Portfolio</h2>
-                <div class="divider-right"></div>
-            </div>
- 
-            <div class="projects">
-                <div>
-                    <img id="project1" src="assets/images/project 1.jpeg"/>
-                    <div class="overlay">
-                        <a  href ="assets/images/project 1.jpeg"
-                </div>
-                <a><img id="project1" src="assets/images/project 1.jpeg"/></a>
-                <a><img id="project2"src="assets/images/project2.jpeg" /></a>
-                <a><img id="project3"src="assets/images/project3.jpeg" /></a>
-                <a><img id="project4" src="assets/images/project4.jpeg"/></a>
-            </div>
-        </section>
-    <footer>
+        <!-- PORTFOLIO -->
+        <div class="portfolio-container">
+            Portfolio
+        </div>
 
-    </footer>
+        <!-- CONTACT ME -->
+        <div class="contact-container">
+            Contact
+        </div>
+    </main>
 </body>
 </html>
