added beginning styling, hero image and text

--- a/index.html
+++ b/index.html
@@ -11,28 +11,38 @@
 <body>
     <header>
         <nav>
-            Navigation Bar
+            <a href="#home">Home</a>
+            <div>
+                <a href="#about-me">About Me</a>
+                <a>Resume</a>
+                <a href="#portfolio">Portfolio</a>
+                <a href="#contact-me">Contact Me</a>
+            </div>
         </nav>
     </header>    
 
     <main> 
         <!-- IMAGE WITH HERO ICON ON IT -->
-        <div class="hero-container">
-            <p>Hero-Container</p>
+        <div class="hero-container col-4">
+            <div>
+                <img src="assets/images/Portfolio/IMG_2927.JPG" alt="" class="profile-picture"/>
+                <h2>Kendall Swanson</h2>
+                <h4>Full-Stack Web Developer</h4>
+            </div>
         </div>
 
         <!-- ABOUT ME-->
-        <div class="about-container">
+        <div class="about-container" id="about-me">
             About
         </div>
 
         <!-- PORTFOLIO -->
-        <div class="portfolio-container">
+        <div class="portfolio-container" id="portfolio">
             Portfolio
         </div>
 
         <!-- CONTACT ME -->
-        <div class="contact-container">
+        <div class="contact-container" id="contact-me">
             Contact
         </div>
     </main>
