--- a/index.html
+++ b/index.html
@@ -7,18 +7,26 @@
     <title>Kendall Swanson</title>
     <link rel="stylesheet" href="./assets/css/jass.css"></link>
     <link rel="stylesheet" href="./assets/css/style.css"></link>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&display=swap" rel="stylesheet">
+    <link href="http://fonts.cdnfonts.com/css/aqua-grotesque" rel="stylesheet">
+                
 </head>
 <body>
     <header>
-        <nav>
-            <a href="#home">Home</a>
-            <div>
+        <nav class="navigation">
+            <div class="home">
+                <a href="#home">Home</a>
+            </div>
+            <div class="links col-5">
                 <a href="#about-me">About Me</a>
                 <a>Resume</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#contact-me">Contact Me</a>
             </div>
         </nav>
+        
     </header>    
 
     <main> 
