media query pt 1 and additional styling

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/style.css"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/aqua-grotesque" rel="stylesheet">
                 
 </head>
@@ -19,25 +19,25 @@
             <div class="home">
                 <a href="#home">Home</a>
             </div>
-            <div class="links col-5">
+            <div class="links">
                 <a href="#about-me">About Me</a>
                 <a>Resume</a>
                 <a href="#portfolio">Portfolio</a>
                 <a href="#contact-me">Contact Me</a>
             </div>
         </nav>
-        
-    </header>    
-
-    <main> 
-        <!-- IMAGE WITH HERO ICON ON IT -->
-        <div class="hero-container col-4">
-            <div>
+                <!-- IMAGE WITH HERO ICON ON IT -->
+        <div class="background" >
+            <div class="hero-container col-5">
                 <img src="assets/images/Portfolio/IMG_2927.JPG" alt="" class="profile-picture"/>
                 <h2>Kendall Swanson</h2>
                 <h4>Full-Stack Web Developer</h4>
             </div>
         </div>
+    </header>    
+
+    <main> 
+
 
         <!-- ABOUT ME-->
         <div class="about-container" id="about-me">
