--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         </nav>
                 <!-- IMAGE WITH HERO ICON ON IT -->
         <div class="background" >
-            <div class="hero-container col-5">
-                <img src="assets/images/Portfolio/IMG_2927.JPG" alt="" class="profile-picture"/>
-                <h2>Kendall Swanson</h2>
-                <h4>Full-Stack Web Developer</h4>
+            <div class="hero-container">
+                <!-- <img src="assets/images/Portfolio/IMG_2927.JPG" alt="" class="profile-picture"/> -->
+                    <h2>KENDALL SWANSON</h2>
+                    <h4>Full-Stack Web Developer</h4>
+
+
             </div>
         </div>
     </header>    
@@ -41,17 +43,17 @@
 
         <!-- ABOUT ME-->
         <div class="about-container" id="about-me">
-            About
+            <h2>ABOUT ME</h2>
         </div>
 
         <!-- PORTFOLIO -->
         <div class="portfolio-container" id="portfolio">
-            Portfolio
+            <h2>PORTFOLIO</h2>
         </div>
 
         <!-- CONTACT ME -->
         <div class="contact-container" id="contact-me">
-            Contact
+            <h2>CONTACT ME</h2>
         </div>
     </main>
 </body>
