--- a/index.html
+++ b/index.html
@@ -29,11 +29,9 @@
                 <!-- IMAGE WITH HERO ICON ON IT -->
         <div class="background" >
             <div class="hero-container">
-                <!-- <img src="assets/images/Portfolio/IMG_2927.JPG" alt="" class="profile-picture"/> -->
+               
                     <h2>KENDALL SWANSON</h2>
                     <h4>Full-Stack Web Developer</h4>
-
-
             </div>
         </div>
     </header>    
@@ -43,7 +41,19 @@
 
         <!-- ABOUT ME-->
         <div class="about-container" id="about-me">
-            <h2>ABOUT ME</h2>
+            <div class="profile-picture" >
+                <img src="assets/images/Portfolio/IMG_2927.JPG" alt=""/>
+            </div>
+            <div class="biography">
+                <div class="about-me-text">
+
+                    <h2 class="about-me-title">ABOUT ME</h2>
+                    <div class="divider-right"> </div>
+                </div>
+
+                <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant at the Chicago-based company Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.</p>
+            </div>
+
         </div>
 
         <!-- PORTFOLIO -->
