cleaning and reorganizing CSS, added some notes to myself about the bio

--- a/index.html
+++ b/index.html
@@ -52,6 +52,8 @@
                 </div>
 
                 <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant at the Chicago-based company Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.</p>
+
+                <p>Need to Add more here</p>
             </div>
 
         </div>
