added another blurb to the about me bio

--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
                     <div class="divider-right"> </div>
                 </div>
 
-                <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant at the Chicago-based company Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.</p>
-
+                <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant at the Chicago-based company Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.
+                <br><br>
+                What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. While the Informatics track solely focused on Python and SQL, I invested in CodeAcademy so I could dip my toe into what else this world of coding offered.</p>
                 <p>Need to Add more here</p>
             </div>
 
