--- a/index.html
+++ b/index.html
@@ -51,9 +51,13 @@
                     <div class="divider-right"> </div>
                 </div>
 
-                <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. Currently, I am working as a Technical Consultant at the Chicago-based company Strata Decision Technology and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development.
+                <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. 
                 <br><br>
-                What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. While the Informatics track solely focused on Python and SQL, I invested in CodeAcademy so I could dip my toe into what else this world of coding offered.</p>
+                For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
+                <br><br>
+                While my background has been focused mainly in Python and SQL, I have always been interested extending my ***WORD like library or knowledge or something ****. To explore more in the world of coding. I joined the CodeAcademy community in 2018, which provided a hundreds of learning oppurtunities and potential paths I could learn more about. These lessons were the gateway that brought me to where I am at now. 
+                <br><br> 
+                In September 2021, I began a Northwestern Coding Bootcamp that focuses on Full Stack Web Development. Throughout this class, my enjoyment of this field has only grown and confirmed that this is the field I'm meant to be in!</p>
                 <p>Need to Add more here</p>
             </div>
 
