--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <!-- ABOUT ME-->
         <div class="about-container" id="about-me">
             <div class="profile-picture" >
-                <img src="assets/images/Portfolio/IMG_2927.JPG" alt=""/>
+                <img src="assets/images/Portfolio/IMG_4734.JPG" alt=""/>
             </div>
             <div class="biography">
                 <div class="about-me-text">
@@ -55,10 +55,9 @@
                 <br><br>
                 For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
                 <br><br>
-                While my background has been focused mainly in Python and SQL, I have always been interested extending my ***WORD like library or knowledge or something ****. To explore more in the world of coding. I joined the CodeAcademy community in 2018, which provided a hundreds of learning oppurtunities and potential paths I could learn more about. These lessons were the gateway that brought me to where I am at now. 
+                While my background has been focused mainly in Python and SQL, I have always been interested extending my repertoire. To explore more in the world of coding. I joined the CodeAcademy community in 2018, which provided a hundreds of learning oppurtunities and potential paths I could learn more about. These lessons were the gateway that brought me to where I am at now. 
                 <br><br> 
                 In September 2021, I began a Northwestern Coding Bootcamp that focuses on Full Stack Web Development. Throughout this class, my enjoyment of this field has only grown and confirmed that this is the field I'm meant to be in!</p>
-                <p>Need to Add more here</p>
             </div>
 
         </div>
