styling of portfolio title

--- a/index.html
+++ b/index.html
@@ -64,7 +64,22 @@
 
         <!-- PORTFOLIO -->
         <div class="portfolio-container" id="portfolio">
+            <div class="divider-left "> </div>
             <h2>PORTFOLIO</h2>
+            <div class="divider-right"> </div>
+            <div class="cards">
+                <div class="project-1">
+
+                </div>
+
+                <div class="project-2">
+                    
+                </div>
+
+                <div class="project-3">
+                    
+                </div>
+            </div>
         </div>
 
         <!-- CONTACT ME -->
