adding in the project cards

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
 
         <!-- PORTFOLIO -->
         <div class="portfolio-container" id="portfolio">
-            <div class="divider-left "> </div>
-            <h2>PORTFOLIO</h2>
-            <div class="divider-right"> </div>
+            <div class="portfolio-container-title">
+                <div class="divider-left "> </div>
+                <h2>PORTFOLIO</h2>
+                <div class="divider-right"> </div>
+            </div>
+
             <div class="cards">
                 <div class="project-1">
-
+                    <a href ="https://kvs1995.github.io/hwk6-weather-dashboard/"> </a>
                 </div>
 
                 <div class="project-2">
