some more finishing touches

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
                 <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. 
                 <br><br>
-                For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. and am enrolled in the Northwestern Coding Bootcamp to study Full-Stack Web Development. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
+                For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
                 <br><br>
                 While my background has been focused mainly in Python and SQL, I have always been interested extending my repertoire. To explore more in the world of coding. I joined the CodeAcademy community in 2018, which provided a hundreds of learning oppurtunities and potential paths I could learn more about. These lessons were the gateway that brought me to where I am at now. 
                 <br><br> 
