pseudo code for mapping out the new index.html navbar via bootstrap.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,25 @@
                 
 </head>
 <body>
+
+    <!--
+  Header Tag
+    <nav> -- class: navbar navbar-expand-lg sticky-top
+      <div> -- class: container-fluid
+        <button> -- class: navbar-toggler | type: button | data-bs-toggle: collapse | data-bs-target: #navbarNavAltMarkup | aria-controls: navBarNavAltMarkup | aria-expanded: false | aria-label: Toggle navigation
+        <div> -- class: collapse navbar-collapse | id: navbarNavAltMarkup
+          <div> -- class: navbar-nav
+            <a> -- class: nav-link active | aria-current: page | href: #Home
+              Home
+            <span> -- class: nav justify-content-end
+              <a> -- class: nav-link | href: #about-me
+                About Me
+              <a> -- class: nav-link | href: https://drive.google.com/file/d/1wv2uWN-obhFIj0F3cEO6k95jj61CjXCM/view?usp=sharing | target: _blank
+                Resume
+              <a> -- class: nav-link | href: #portfolio
+                Portfolio
+              <a> -- class: nav-link | href: #contact--me
+      -->
     <header>
         <nav class="navigation">
             <div class="home">
