added in expected Bootstrap js

--- a/index.html
+++ b/index.html
@@ -140,4 +140,11 @@
         </div>
     </main>
 </body>
+
+<script type="module">
+  import { Toast } from 'bootstrap.esm.min.js'
+
+  Array.from(document.querySelectorAll('.toast'))
+    .forEach(toastNode => new Toast(toastNode))
+</script>
 </html>
