--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
 
     <link href="/docs/5.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- <link rel="stylesheet" href="./assets/css/jass.css"></link> -->
-    <!-- <link rel="stylesheet" href="./assets/css/style.css"></link> -->
+    <!-- <link rel="stylesheet" href="./assets/css/style_v1.css"></link> -->
+    <link rel="stylesheet" href="./assets/css/style.css"></link>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <link href="http://fonts.cdnfonts.com/css/aqua-grotesque" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a932c6961f.js" crossorigin="anonymous"></script>
   </head>
-  <body>
+  <body class="bg-dark text-white">
 
     <!--
   Header Tag
@@ -41,34 +42,44 @@
             <a> -- class: nav-link | href: #contact--me
       -->
   <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top" aria-label="Fifth navbar example">
+    <nav class="navbar navbar-expand-lg  bg-dark sticky-top py-1" aria-label="Fifth navbar example">
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
   
-        <div class="navbar-collapse collapse hide" id="navbarNavAltMarkup" style="">
+        <div class="navbar-collapse collapse hide" id="navbarNavAltMarkup">
           <ul class="navbar-nav col-lg-12">
-            <li class="nav-item col-xxl-8 col-lg-8">
-              <a class="nav-link active text-center" aria-current="page" href="#home">Home</a>
+            <li class="nav-item  col-xl-7 col-lg-6">
+              <a class="nav-link active" aria-current="page" href="#home">Home</a>
             </li>
-            <li class="nav-item col-xxl-1 col-lg-1">
-              <a class="nav-link text-center" href="#">About Me</a>
-            </li>
-            <li class="nav-item col-xxl-1 col-lg-1">
-              <a class="nav-link text-center" href="https://drive.google.com/file/d/1wv2uWN-obhFIj0F3cEO6k95jj61CjXCM/view?usp=sharing" target="_blank">Resume</a>
-            </li>
-            <li class="nav-item col-xxl-1 col-lg-1">
-              <a class="nav-link text-center" href="#">Portfolio</a>
-            </li>
-            <li class="nav-item col-xxl-1 col-lg-2">
-              <a class="nav-link text-center" href="#">Contact Me</a>
-            </li>
+            <div class="col-lg-6 row"> 
+              <li class="nav-item col-lg-3 col-xl-3">
+                <a class="nav-link text-center" href="#about-me">About Me</a>
+              </li>
+              <li class="nav-item col-lg-3 col-xl-2">
+                <a class="nav-link text-center" href="https://drive.google.com/file/d/1wv2uWN-obhFIj0F3cEO6k95jj61CjXCM/view?usp=sharing" target="_blank">Resume</a>
+              </li>
+              <li class="nav-item col-lg-3 col-xl-2">
+                <a class="nav-link text-center" href="#portfolio">Portfolio</a>
+              </li>
+              <li class="nav-item col-lg-3 col-xl-3">
+                <a class="nav-link text-center" href="#contact-me">Contact Me</a>
+              </li>
+            </div>
           </ul>
         </div>
       </div>
     </nav>
+
   </header>
+  <main class="px-3">
+    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column text-center">
+      <h1>Kendall Swanson</h1>
+      <p class="lead">Full-Stack Web Developer</p>
+    </div>
+
+  </main>
     <!--
     Optional JavaScript; choose one of the two!
 
