--- a/index.html
+++ b/index.html
@@ -74,10 +74,41 @@
 
   </header>
   <main class="px-3">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column text-center">
-      <h1>Kendall Swanson</h1>
-      <p class="lead">Full-Stack Web Developer</p>
+    <div class="bg-image p-5 d-flex justify-content-center">
+      <div class="mask col-6 text-center">
+        <div class = "d-flex align-items-center justify-content-center h-100 row text-center p-5">
+          <h1 class="">Kendall Swanson</h1>
+          <h4>Full-Stack Web Developer</h4>
+        </div>
+      </div>
     </div>
+    <!-- <div class="cover-container d-flex  p-3 mx-auto flex-column text-center bg-image justify-content-center" id="bg-image"> -->
+      <!-- <div class="bg-image"> 
+        <div class="mask col-5 justify-content-center tex" id="cover-text">
+          <div class=" justify-content-center align-items-center h-100 col">
+            <h1>Kendall Swanson</h1>
+            <p class="lead">Full-Stack Web Developer</p>
+          </div>
+        </div>
+      </div> -->
+      <!-- Background image -->
+<!-- <div
+class="bg-image"
+style="
+  background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/012.webp');
+  height: 100vh;
+"
+>
+<div class="mask" style="background-color: rgba(178, 60, 253, 0.6);">
+  <div class="d-flex justify-content-center align-items-center h-100">
+    <h1 class="text-white mb-0">Page title</h1>
+  </div>
+</div>
+</div> -->
+<!-- Background image -->
+    </div>
+
+
 
   </main>
     <!--
