changed position of the cover text

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
   </header>
   <main class="px-3">
-    <div class="bg-image p-5 d-flex justify-content-center">
-      <div class="mask col-6 text-center">
+    <div class="bg-image p-5 d-flex">
+      <div class="mask col-6 text-center mt-5">
         <div class = "d-flex align-items-center justify-content-center h-100 row text-center p-5">
           <h1 class="">Kendall Swanson</h1>
           <h4>Full-Stack Web Developer</h4>
