--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link href="http://fonts.cdnfonts.com/css/aqua-grotesque" rel="stylesheet">
     <script src="https://kit.fontawesome.com/a932c6961f.js" crossorigin="anonymous"></script>
   </head>
-  <body class="bg-dark text-white">
+  <body class="text-white">
 
     <!--
   Header Tag
@@ -75,10 +75,10 @@
   </header>
   <main class="px-3">
     <div class="bg-image p-5 d-flex">
-      <div class="mask col-6 text-center mt-5">
-        <div class = "d-flex align-items-center justify-content-center h-100 row text-center p-5">
-          <h1 class="">Kendall Swanson</h1>
-          <h4>Full-Stack Web Developer</h4>
+      <div class="mask col-8 py-5">
+        <div class = "d-flex justify-content-space-around h-100 row p-5">
+          <h1 class="pb-0">Kendall Swanson</h1>
+          <h4 class="pb-0">Full-Stack Web Developer</h4>
         </div>
       </div>
     </div>
