--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
             <a> -- class: nav-link | href: #contact--me
       -->
   <header>
-    <nav class="navbar navbar-expand-lg  bg-dark sticky-top py-1" aria-label="Fifth navbar example">
+    <nav class="navbar navbar-expand-lg  bg-dark sticky-top py-1" aria-label="Fifth navbar example" >
+      <!-- id="nav-id" -->
       <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="true" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -74,6 +75,10 @@
 
   </header>
   <main class="px-3">
+  <!-- Potential Scrolling -->
+  <!--data-bs-spy="scroll" data-bs-target="nav-id" data-bs-offset="0" class="scrollspy-example" tabindex=""-->
+  
+  <!-- Cover -->
     <div class="bg-image p-5 d-flex">
       <div class="mask col-8 py-5">
         <div class = "d-flex justify-content-space-around h-100 row p-5">
@@ -82,45 +87,27 @@
         </div>
       </div>
     </div>
-    <!-- <div class="cover-container d-flex  p-3 mx-auto flex-column text-center bg-image justify-content-center" id="bg-image"> -->
-      <!-- <div class="bg-image"> 
-        <div class="mask col-5 justify-content-center tex" id="cover-text">
-          <div class=" justify-content-center align-items-center h-100 col">
-            <h1>Kendall Swanson</h1>
-            <p class="lead">Full-Stack Web Developer</p>
-          </div>
-        </div>
-      </div> -->
-      <!-- Background image -->
-<!-- <div
-class="bg-image"
-style="
-  background-image: url('https://mdbcdn.b-cdn.net/img/new/fluid/nature/012.webp');
-  height: 100vh;
-"
->
-<div class="mask" style="background-color: rgba(178, 60, 253, 0.6);">
-  <div class="d-flex justify-content-center align-items-center h-100">
-    <h1 class="text-white mb-0">Page title</h1>
-  </div>
-</div>
-</div> -->
-<!-- Background image -->
+
+  <!-- About Me  -->
+  <hr class="featurette-divider">
+  <div class="row featurette p-4" id="about-me">
+    <div class="col-md-7 order-md-2">
+      <h2 class="featurette-heading">Get to Know Me</h2>
+      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
     </div>
+    <div class="col-md-5 order-md-1" id="about-me-img">
+      <img class="img-fluid mx-auto"  width="400" height="400" xmlns="" role="img" aria-label="" preserveAspectRatio="xMidYMid slice"
+      src="assets/images/Portfolio/IMG_4734.JPG" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
 
+    </div>
+  </div>
+  <!-- Portfolio -->
 
+  <!-- Contact Me -->
 
   </main>
-    <!--
-    Optional JavaScript; choose one of the two!
-
-    Option 1: Bootstrap Bundle with Popper 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-    Option 2: Separate Popper and Bootstrap JS
-     -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
    
   </body>
 </html>
