--- a/index.html
+++ b/index.html
@@ -93,11 +93,17 @@
   <div class="row featurette p-4" id="about-me">
     <div class="col-md-7 order-md-2">
       <h2 class="featurette-heading">Get to Know Me</h2>
-      <p class="lead">Another featurette? Of course. More placeholder content here to give you an idea of how this layout would work with some actual real-world content in place.</p>
+      <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. 
+        <br><br>
+        For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
+        <br><br>
+        While my background has been focused mainly in Python and SQL, I have always been interested extending my repertoire. To explore more in the world of coding. I joined the CodeAcademy community in 2018, which provided a hundreds of learning oppurtunities and potential paths I could learn more about. These lessons were the gateway that brought me to where I am at now. 
+        <br><br> 
+        In September 2021, I began a Northwestern Coding Bootcamp that focuses on Full Stack Web Development. Throughout this class, my enjoyment of this field has only grown and confirmed that this is the field I'm meant to be in!</p>
     </div>
-    <div class="col-md-5 order-md-1" id="about-me-img">
+    <div class="col-md-5 order-md-1 d-flex align-items-center" id="about-me-img">
       <img class="img-fluid mx-auto"  width="400" height="400" xmlns="" role="img" aria-label="" preserveAspectRatio="xMidYMid slice"
-      src="assets/images/Portfolio/IMG_4734.JPG" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"></rect></img>
+      src="assets/images/Portfolio/IMG_4734.JPG" focusable="false"></img>
 
     </div>
   </div>
