added in the portfolio proejcts - rearrange

--- a/index.html
+++ b/index.html
@@ -104,10 +104,63 @@
     <div class="col-md-5 order-md-1 d-flex align-items-center" id="about-me-img">
       <img class="img-fluid mx-auto"  width="400" height="400" xmlns="" role="img" aria-label="" preserveAspectRatio="xMidYMid slice"
       src="assets/images/Portfolio/IMG_4734.JPG" focusable="false"></img>
+    </div>
+  </div>  
 
+  <!-- Portfolio -->
+  <hr>
+  
+<div class="d-flex pt-1">
+  <div class="card col-5 me-4">
+    <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
+    <div class="card-img-overlay">
+      <a href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
-  <!-- Portfolio -->
+  <div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card">
+          <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
+          <div class="card-img-overlay">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    <div class="col">
+      <div class="card">
+        <img src="/assets/images/coding-quiz.png" class="card-img" alt="..." >
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="/assets/images/work-day-scheduler.png" class="card-img" alt="..." >
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="/assets/images/.png" class="card-img" alt="..." >
+        <div class="card-img-overlay">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+      
 
   <!-- Contact Me -->
 
