--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   <hr class="featurette-divider">
   <div class="row featurette p-4" id="about-me">
     <div class="col-md-7 order-md-2">
-      <h2 class="featurette-heading">Get to Know Me</h2>
+      <h2 class="featurette-heading">GET TO KNOW ME</h2>
       <p>I attended University of Iowa for Bioinformatics and a Minor in Italian. What started off as a random class selection for Introduction to Computer Science, lead to a love of coding and learning new languages. 
         <br><br>
         For the past 2 and a half years, I have been working at the Chicago-based company Strata Decision Technology as a Advanced Planning Technical Consultant for the healthcare finance tool StrataJazz. Here, I have gained valuable skills in client/internal communciation and problem-solving, as well as expanded my understanding of SQL and database structures. 
@@ -108,53 +108,56 @@
   </div>  
 
   <!-- Portfolio -->
+<div class="d-flex text-center" id="portfolio">
+  <hr>  
+  <h1 class="h-6">P O R T F O L I O</h1> 
   <hr>
-  
-<div class="d-flex pt-1">
-  <div class="card col-5 me-4">
+</div>
+<div class="d-flex my-3">
+  <div class="card col-5 me-4 ">
     <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
-    <div class="card-img-overlay">
-      <a href="#" class="btn btn-primary">Go somewhere</a>
+    <div class="card-img-overlay" id="project-1">
+      <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
     </div>
   </div>
   <div class="row row-cols-1 row-cols-md-2 g-4">
     <div class="col">
       <div class="card">
           <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
-          <div class="card-img-overlay">
-            <h5 class="card-title">Card title</h5>
+          <div class="card-img-overlay" id="project-2">
+            <h5 class="card-title">Dibd</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
           </div>
         </div>
       </div>
     <div class="col">
       <div class="card">
         <img src="/assets/images/coding-quiz.png" class="card-img" alt="..." >
-        <div class="card-img-overlay">
+        <div class="card-img-overlay" id="project-3">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
         <img src="/assets/images/work-day-scheduler.png" class="card-img" alt="..." >
-        <div class="card-img-overlay">
+        <div class="card-img-overlay" id="project-4">
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
       </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
         <img src="/assets/images/.png" class="card-img" alt="..." >
-        <div class="card-img-overlay">
+        <div class="card-img-overlay" id="project-5>
           <h5 class="card-title">Card title</h5>
           <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a class="github-link"href="#" class="btn btn-primary">Go somewhere</a>
         </div>
       </div>
     </div>
