added in the remaining projects

--- a/index.html
+++ b/index.html
@@ -108,16 +108,18 @@
   </div>  
 
   <!-- Portfolio -->
-<div class="d-flex text-center" id="portfolio">
+<div class="text-center" id="portfolio">
   <hr>  
   <h1 class="h-6">P O R T F O L I O</h1> 
   <hr>
 </div>
 <div class="d-flex my-3">
-  <div class="card col-5 me-4 ">
-    <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
-    <div class="card-img-overlay" id="project-1">
-      <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
+  <div class="card col-6 me-4 ">
+    <img src="/assets/images/project-2/project-2.png" class="card-img" alt="..." >
+    <div class="card-img-overlay text-center" id="project-1">
+      <h5 class="card-title h-6 text-center">D I B Z</h5>
+      <p class="card-text text-center">This app was created for property managers to offer services to renters, starting with a laundry machine reservation system. In future versions, tool borrowing and parking management will be available. We created a homepage which will allow the user to sign in or create an account. The user will then be able to select a service and view their reservation status, notifications and a message board. For the first version of this app, the laundry button and reservation board will be enabled. When selecting the laundry button, the user will be directed to a page which allows them to choose whether they would like to reserve a washer or a dryer. When the user selects which machine type they would like to use, they will be directed to a page which shows them which washers/dryers are available. Then the user may choose a washer or dryer they would like to reserve.</p>
+      <a href="https://tenant-buddy.herokuapp.com/" class="btn btn-primary github-link">Check It Out on Heroku! ></a>
     </div>
   </div>
   <div class="row row-cols-1 row-cols-md-2 g-4">
@@ -125,9 +127,9 @@
       <div class="card">
           <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
           <div class="card-img-overlay" id="project-2">
-            <h5 class="card-title">Dibd</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Weather Dashboard</h5>
+            <p class="card-text">A nice and simple weather dashboard that presents you with basic information on the upcoming forecast of the searched city. The application allows you to search for multiple cities, while keeping the previous ones stored so you can go back with just a click of a button!</p>
+            <a  href="https://kvs1995.github.io/super-simple-weather-dashboard/"  class=" github-link btn btn-primary text-center">Try It Out!</a>
           </div>
         </div>
       </div>
@@ -135,29 +137,30 @@
       <div class="card">
         <img src="/assets/images/coding-quiz.png" class="card-img" alt="..." >
         <div class="card-img-overlay" id="project-3">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Quick Code Quiz</h5>
+          <p class="card-text">New to coding and want to make sure you are grasping the basics? Try this quick coding quiz that tests you on the building blocks of CSS, HTML, and JavaScript. The quiz is timed and high scores can be compared! Beat out your old high score to show the progress you've made or just to buff up on the small stuff that you haven't reviewed in a while.</p>
+          <a href="https://kvs1995.github.io/quick-code-quiz/" class=" github-link btn btn-primary text-center">Try It Out!</a>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="/assets/images/work-day-scheduler.png" class="card-img" alt="..." >
+        <img src="/assets/images/team-generator.png" class="card-img" alt="..." >
         <div class="card-img-overlay" id="project-4">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a class="github-link" href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Rootin Tootin Team Generator</h5>
+          <p class="card-text">This application allows users to create the perfect team roster containin a manager, engineers and intens. Th application utilizes Node.js command line and npm packages fs and inquirer to prompt the user for employee information and generates an HTML webpage that displays summaries for each employee.</p>
+          <a  href="https://kvs1995.github.io/rootin-tootin-team-generator/" class=" github-link btn btn-primary text-center">Try it Out!</a>
       </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="/assets/images/.png" class="card-img" alt="..." >
+        <img src="/assets/images/e-commerce.png" class="card-img" alt="..." >
         <div class="card-img-overlay" id="project-5>
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          <a class="github-link"href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Easy Peasy ECommerce</h5>
+          <p class="card-text">Internet retail, also known as e-commerce, is the largest sector of the electronics industry, generating an estimated $29 trillion in 2019. E-commerce platforms like Shopify and WooCommerce provide a suite of services to businesses of all sizes. Due to their prevalence, I have created a simple back-end e-commerce sit utilizing Sequelize and MySQL.
+          </p>
+          <a href="https://github.com/kvs1995/easy-peasy-eCommerce" class=" github-link btn btn-primary text-center">Take a look at the repository!</a>
         </div>
       </div>
     </div>
