added in contact me styling

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <img src="/assets/images/project-2/project-2.png" class="card-img" alt="..." >
     <div class="card-img-overlay text-center" id="project-1">
       <h5 class="card-title h-6 text-center">D I B Z</h5>
-      <p class="card-text text-center">This app was created for property managers to offer services to renters, starting with a laundry machine reservation system. In future versions, tool borrowing and parking management will be available. We created a homepage which will allow the user to sign in or create an account. For the first version of this app, the laundry button and reservation board will be enabled.</p>
+      <p class="card-text text-center">This app was created for property managers to offer services to renters, starting with a laundry machine reservation system.</p>
       <a href="https://tenant-buddy.herokuapp.com/" class="btn btn-primary github-link">Check It Out on Heroku! ></a>
     </div>
   </div>
@@ -128,7 +128,7 @@
           <img src="/assets/images/weather-dashboard.png" class="card-img" alt="..." >
           <div class="card-img-overlay text-center" id="project-2">
             <h5 class="card-title">Weather Dashboard</h5>
-            <p class="card-text">A nice and simple weather dashboard that presents you with basic information on the upcoming forecast of the searched city. The application allows you to search for multiple cities, while keeping the previous ones stored so you can go back with just a click of a button!</p>
+            <p class="card-text">A nice and simple weather dashboard that presents you with basic information on the upcoming forecast of the searched city.</p>
             <a  href="https://kvs1995.github.io/super-simple-weather-dashboard/"  class=" github-link btn btn-primary text-center">Try It Out!</a>
           </div>
         </div>
@@ -138,7 +138,7 @@
         <img src="/assets/images/coding-quiz.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-3">
           <h5 class="card-title">Quick Code Quiz</h5>
-          <p class="card-text">New to coding and want to make sure you are grasping the basics? Try this quick coding quiz that tests you on the building blocks of CSS, HTML, and JavaScript. The quiz is timed and high scores can be compared! Beat out your old high score to show the progress you've made or just to buff up on the small stuff that you haven't reviewed in a while.</p>
+          <p class="card-text">New to coding and want to make sure you are grasping the basics? Try this quick coding quiz that tests you on the building blocks of CSS, HTML, and JavaScript. </p>
           <a href="https://kvs1995.github.io/quick-code-quiz/" class=" github-link btn btn-primary text-center">Try It Out!</a>
         </div>
       </div>
@@ -148,7 +148,7 @@
         <img src="/assets/images/team-generator.png" class="card-img" alt="..." >
         <div class="card-img-overlay text-center" id="project-4">
           <h5 class="card-title">Rootin Tootin Team Generator</h5>
-          <p class="card-text">This application allows users to create the perfect team roster containin a manager, engineers and intens. Th application utilizes Node.js command line and npm packages fs and inquirer to prompt the user for employee information and generates an HTML webpage that displays summaries for each employee.</p>
+          <p class="card-text">This application allows users to create the perfect team roster containin a manager, engineers and intens.</p>
           <a  href="https://kvs1995.github.io/rootin-tootin-team-generator/" class=" github-link btn btn-primary text-center">Try it Out!</a>
       </div>
       </div>
@@ -156,9 +156,9 @@
     <div class="col">
       <div class="card h-100">
         <img src="/assets/images/e-commerce.png" class="card-img" alt="..." >
-        <div class="card-img-overlay text-center" id="project-5>
+        <div class="card-img-overlay text-center" id="project-5">
           <h5 class="card-title">Easy Peasy ECommerce</h5>
-          <p class="card-text">Internet retail, also known as e-commerce, is the largest sector of the electronics industry, generating an estimated $29 trillion in 2019. E-commerce platforms like Shopify and WooCommerce provide a suite of services to businesses of all sizes. Due to their prevalence, I have created a simple back-end e-commerce sit utilizing Sequelize and MySQL.
+          <p class="card-text">This application serves as a E-commerce platform to provide a suite of services to businesses of all sizes. 
           </p>
           <a href="https://github.com/kvs1995/easy-peasy-eCommerce" class=" github-link btn btn-primary text-center">Take a look at the repository!</a>
         </div>
@@ -169,6 +169,19 @@
       
 
   <!-- Contact Me -->
+  <div class="text-center" id="contact-me">
+    <hr>  
+    <h1 class="h-6">CONTACT ME</h1> 
+    <hr>
+  </div>
+  <div class="contact-container" id="contact-me">
+    <div class="contact-me-content">
+        <a> 312.636.9833 </a>
+        <a href="mailto:kvscoding@gmail.com" target="_blank">kvscoding@gmail.com</a>
+        <a href="https://github.com/kvs1995">GitHub</a>
+        <a href="https://www.linkedin.com/in/kendallvswanson/">LinkedIn</a>
+    </div>
+</div>
 
   </main>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
